--- a/pay.html
+++ b/pay.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css">
   <link rel="stylesheet" type="text/css" href="css/elastic_grid.min.css">
   <link rel="stylesheet" type="text/css" href="https://www.jqueryscript.net/tags.php?/grid.min.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
   <link rel="stylesheet" href="css/pay.css">
   <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Caesar+Dressing|Alfa+Slab+One|Raleway|Quicksand" rel="stylesheet">
 
@@ -50,37 +50,37 @@
 
 
 
-      <div id="item-carousel" class="carousel slide" data-ride="carousel">
-        <!--Carousel Indicators-->
-        <ol class="carousel-indicators">
-          <li data-target="#item-carousel" data-slide-to="0" class="active-carousel"></li>
-          <li data-target="#item-carousel" data-slide-to="1" class="active-carousel"></li>
-          <li data-target="#item-carousel" data-slide-to="2" class="active-carousel"></li>
-        </ol>
+    <div id="item-carousel" class="carousel slide" data-ride="carousel">
+      <!--Carousel Indicators-->
+      <ol class="carousel-indicators">
+        <li data-target="#item-carousel" data-slide-to="0" class="active-carousel"></li>
+        <li data-target="#item-carousel" data-slide-to="1" class="active-carousel"></li>
+        <li data-target="#item-carousel" data-slide-to="2" class="active-carousel"></li>
+      </ol>
 
-        <!--Wrapper for slides-->
-        <div class="carousel-inner">
-          <div class="item active">
-            <img src="images/cara.jpg">
-          </div>
-          <div class="item">
-            <img src="images/cara2.jpg">
-          </div>
-          <div class="item">
-            <img src="images/cara3.0.jpg">
-          </div>
-
+      <!--Wrapper for slides-->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="images/cara.jpg">
         </div>
-        <!--Left and Right Controls-->
-        <a class="left carousel-control" href="#item-carousel" data-slide="prev">
+        <div class="item">
+          <img src="images/cara2.jpg">
+        </div>
+        <div class="item">
+          <img src="images/cara3.0.jpg">
+        </div>
+
+      </div>
+      <!--Left and Right Controls-->
+      <a class="left carousel-control" href="#item-carousel" data-slide="prev">
            <span class="glyphicon glyphicon-chevron-left"></span>
            <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#item-carousel" data-slide="next">
+      <a class="right carousel-control" href="#item-carousel" data-slide="next">
           <span class="glyphicon glyphicon-chevron-right"></span>
            <span class="sr-only">Next</span>
        </a>
-      </div>
+    </div>
 
 
 
@@ -95,35 +95,35 @@
         <img src="images/nikered.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get animated pulse">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/airforce.jpg">
-        <h4>Nike Red Runner&reg</h4>
-        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <h4>AirForce&reg</h4>
+        <p>Fresh outta the container, rock these babies for your party and be like mama I made it</p>
+        <button type="button" class="btn get">  <span>$210</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/airjordans.jpeg">
-        <h4>Nike Red Runner&reg</h4>
-        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+        <h4>Mike J's&reg</h4>
+        <p>These Jordans go make your heart go jolly oh!!! Or rather dunk like Mike</p>
+        <button type="button" class="btn get">  <span>$90</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/mowabb.jpg">
-        <h4>Nike Red Runner&reg</h4>
-        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+        <h4>Mowabb&reg <br>Limited Edition&#0169; </h4>
+        <p>Dub! Ouu! Dub! Ouu! Fresher than your sister's yoghurt, Keto don't be drooping! just DUB!!!</p>
+        <button type="button" class="btn get">  <span>$450</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeblue.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
@@ -131,70 +131,70 @@
         <img src="images/nikeRun.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikearmyg.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/nike27.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get" >  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="get btn">  <span>$320</span> GET NOW </button>
+        <button type="button" class="get btn">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="get btn">  <span>$320</span> GET NOW </button>
+        <button type="button" class="get btn">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="get btn">  <span>$320</span> GET NOW </button>
+        <button type="button" class="get btn">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
 
@@ -247,7 +247,7 @@
   <br>
 
 
-  <div class="row checkout-row">
+  <div class="row checkout-row" id="checked-out">
     <div class="col-75">
       <div class="container checkout-con">
 
@@ -348,6 +348,8 @@
 
       </div>
     </div>
+
+
 
   </div>
 
