adjust header image

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 </head>
 <body>
 
-<div class="container-fluid">
+<div class="container-fluid" id="man">
   <header>
   <section class="header-content" id="hea">
     <h1 class="header-title">RENT A SHOE</h1>
     <h4 class="header-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
-    <p class="header-button"><a href="#" class="button">ENJOY SHOPPING</a></p>
+    <p class="header-button">ENJOY SHOPPING</p>
   </section>
   </header>
 </div>
 
-<nav class="navbar navbar-pills">
+<nav class="navbar navbar-pills" id="my">
   <div class="container">
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="active nav navbar-nav">
@@ -39,7 +39,7 @@
   </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid" id="jm">
 <div class="jos-slide">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
@@ -91,7 +91,7 @@
 </div>
 </div>
 </div>
-<div class="section">
+<div class="sect">
   <div class="container">
   <div class="row">
     <div class="col-sm-4">
