--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
             <div class="item active">
                 <img src="images/shoe1.jpeg" alt="Rent Shoe">
                 <div class="carousel-caption">
-                  <h3>Shoe</h3>
-                  <p>Rent a Shoe is always so much fun!!</p>
+                  <h3 style="color: rgb(229,42,111);">Shoe</h3>
+                  <p style="color: rgb(229,42,111);">Rent a Shoe is always so much fun!!</p>
                 </div>
               </div>
 
               <div class="item">
                   <img src="images/airforce.jpg" alt="Rent Shoe">
                   <div class="carousel-caption">
-                    <h3>Shoe</h3>
-                    <p>Rent a Shoe is always so much fun!!</p>
+                    <h3 style="color: rgb(229,42,111,0.4);">Shoe</h3>
+                    <p style="color: rgb(229,42,111,0.4);">Rent a Shoe is always so much fun!!</p>
                   </div>
                 </div>
 
                 <div class="item">
                     <img src="images/airjordans.jpeg" alt="Rent Shoe">
                     <div class="carousel-caption">
-                      <h3>Shoe</h3>
-                      <p>Rent a Shoe is always so much fun!!</p>
+                      <h3 style="color: rgb(229,42,111,0.4);">Shoe</h3>
+                      <p style="color: rgb(229,42,111,0.4);">Rent a Shoe is always so much fun!!</p>
                     </div>
                   </div>
         <a class="carousel-control left" href="#myCarousel" data-slide="prev">
