--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title> Rent a Shoe </title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Ultra" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
@@ -141,8 +142,8 @@
   </div>
 </footer>
 
-<footer class="container-fluid">
-  <div class="row">
+<footer class="container-fluid" id="moo">
+  <div class="row" >
     <div class="col-md-3 text-left" id="social">
       <h4 id="kj">KEEP IN TOUCH</h4>
       <hr id="jk">
