--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Rent a Shoe </title>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css"> -->
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ultra" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 </head>
@@ -54,7 +56,7 @@
             <div class="item active">
                 <img src="images/shoe1.jpeg" alt="Rent Shoe">
                 <div class="carousel-caption">
-                  <h3 style="color: rgb(229,42,111);">Shoe</h3>
+                  <h3 style="color: rgb(229,42,111);"></h3>
                   <p style="color: rgb(229,42,111);">Rent a Shoe is always so much fun!!</p>
                 </div>
               </div>
@@ -62,7 +64,7 @@
               <div class="item">
                   <img src="images/airforce.jpg" alt="Rent Shoe">
                   <div class="carousel-caption">
-                    <h3 style="color: rgb(229,42,111,0.4);">Shoe</h3>
+                    <h3 style="color: rgb(229,42,111,0.4);"></h3>
                     <p style="color: rgb(229,42,111,0.4);">Rent a Shoe is always so much fun!!</p>
                   </div>
                 </div>
@@ -70,7 +72,7 @@
                 <div class="item">
                     <img src="images/airjordans.jpeg" alt="Rent Shoe">
                     <div class="carousel-caption">
-                      <h3 style="color: rgb(229,42,111,0.4);">Shoe</h3>
+                      <h3 style="color: rgb(229,42,111,0.4);"></h3>
                       <p style="color: rgb(229,42,111,0.4);">Rent a Shoe is always so much fun!!</p>
                     </div>
                   </div>
@@ -87,9 +89,10 @@
 
 <div class="section">
   <div class="container">
-    <div class="well">
+    <div class="row" id="hou">
   <h2>About Rent a Shoe</h3>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lacinia massa orci, eget pellentesque purus hendrerit sed. Ut in ex mauris. Sed porttitor risus vitae est aliquam, et porta ante sagittis. Maecenas lobortis ut erat id tincidunt. Fusce hendrerit arcu id efficitur lobortis. Vestibulum finibus pulvinar fringilla. Duis ac velit et ligula finibus porttitor. Phasellus auctor augue non vulputate facilisis. Integer vel mi mollis, tristique justo in, mattis augue.Morbi ut mauris nunc. Quisque mattis maximus rutrum. In ipsum orci, congue sed facilisis ut, mattis sed nunc. Maecenas elementum tortor quam. Pellentesque ac dolor eget ante blandit viverra sed et leo. Proin non lorem non mi blandit venenatis. Donec interdum libero lacus, a hendrerit libero dictum vitae. Nam in efficitur ligula. Maecenas placerat nunc sed nisl mattis bibendum. Nunc aliquam ipsum odio</p>
+    <p>Rent a shoe enables a user lend their un-used shoes to those who might need to use them, for a specific occassion and return them.<br>
+    The borrower chooses a shoe, then the company gets the shoe from the shoe owner and delivers the shoe, collects the money and once the shoe is returned, the customer gets back a percentage, the owner too as well as the company. </p>
 </div>
 </div>
 </div>
