--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <div class="section">
   <div class="container">
     <div class="row" id="hou">
-  <h2>About Rent a Shoe</h3>
+  <h2 style="color:#e52a6f">About Rent a Shoe</h3>
     <p>Rent a shoe enables a user lend their un-used shoes to those who might need to use them, for a specific occassion and return them.<br>
     The borrower chooses a shoe, then the company gets the shoe from the shoe owner and delivers the shoe, collects the money and once the shoe is returned, the customer gets back a percentage, the owner too as well as the company. </p>
 </div>
