--- a/index.html
+++ b/index.html
@@ -97,42 +97,28 @@
 </div>
 </div>
 <div class="sect">
-  <div class="container">
+  <div class="container-fluid">
+      <h2 style="color:#e52a6f">what We Offer</h3>
   <div class="row">
     <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">Shoe</div>
-        <div class="panel-body" id="panel1">
-          <img src="images/cara3.0.jpg" class="img-responsive" alt="Shoe-1 Display"></div>
-        <div class="panel-footer">
-          Rent Price: UGX <br>
-          size:  <br>
-          Location:</div>
-        <div class="caption">
-      </div>
-    </div>
+      <div class="container" id="overlaying">
+  <img src="images/cara3.0.jpg" alt="Shoe-1 Display" class="image">
+  <div class="overlay">MEN'S SHOES</div>
+</div>
   </div>
 
     <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">Shoe</div>
-        <div class="panel-body" id="panel3">
-          <img src="images/cara2.jpg" class="img-responsive" alt="Image"></div>
-        <div class="panel-footer">
-          Rent Price: UGX <br>
-          size:  <br>
-          Location:</div>
-      </div>
+      <div class="container" id="overlaying">
+  <img src="images/cara2.jpg" alt="Image" class="image">
+  <div class="overlay">LADIES' SHOES</div>
+</div>
     </div>
+
     <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">Shoe</div>
-        <div class="panel-body" id="panel2"><img src="images/shoe6.jpeg" class="img-responsive"  alt="Image"></div>
-        <div class="panel-footer">
-          Rent Price: UGX <br>
-          size:  <br>
-          Location:</div>
-      </div>
+      <div class="container" id="overlaying">
+  <img src="images/shoe6.jpeg" alt="Image" class="image">
+  <div class="overlay">KID'S SHOES</div>
+</div>
     </div>
   </div>
 </div>
