Added button links

--- a/pay.html
+++ b/pay.html
@@ -10,42 +10,33 @@
   <link rel="stylesheet" type="text/css" href="https://www.jqueryscript.net/tags.php?/grid.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
   <link rel="stylesheet" href="css/pay.css">
-  <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Caesar+Dressing|Alfa+Slab+One|Raleway|Quicksand" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Caesar+Dressing|Alfa+Slab+One|Comfortaa:700|Raleway|Quicksand|Original+Surfer" rel="stylesheet">
 
   <title>Renter</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg">
-    <div class="nav-list">
-
-      <ul class="menu-list">
-
-        <a href="#Home">
-          <li>Home</li>
-        </a>
-        <a href="#RentOut">
-          <li>Rent Out</li>
-        </a>
-        <a href="#Rent">
-          <li>Rent</li>
-        </a>
-        <a href="#About">
-          <li>About</li>
-        </a>
-        <a href="#How it Works">
-          <li>How It Works</li>
-        </a>
-        <a href="#Profile">
-          <li>News</li>
-        </a>
-
-      </ul>
-
+  <header>
+    <h1>MY RENTING STUFF</h1></header>
+  <nav class="navbar navbar-pills">
+    <div class="container">
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="active nav navbar-nav ">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="rent.html">Rent a Shoe</a></li>
+          <li class="active"><a href="pay.html">Borrow a Shoe</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right gly">
+          <li class="active"><a href="pay.html"><span class="glyphicon glyphicon-user"></span> User Account</a></li>
+          <li class="active"><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+        </ul>
+      </div>
     </div>
-
   </nav>
+  <br><br><br>
   <hr>
+  <br><br><br>
   <div id="cara" class="container-fluid">
 
 
@@ -95,35 +86,35 @@
         <img src="images/nikered.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get animated pulse">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="btn get animated pulse">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
         <img src="images/airforce.jpg">
         <h4>AirForce&reg</h4>
         <p>Fresh outta the container, rock these babies for your party and be like mama I made it</p>
-        <button type="button" class="btn get">  <span>$210</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#check-out"><button type="button" class="btn get">  <span>$210</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
         <img src="images/airjordans.jpeg">
         <h4>Mike J's&reg</h4>
         <p>These Jordans go make your heart go jolly oh!!! Or rather dunk like Mike</p>
-        <button type="button" class="btn get">  <span>$90</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="btn get">  <span>$90</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
         <img src="images/mowabb.jpg">
         <h4>Mowabb&reg <br>Limited Edition&#0169; </h4>
         <p>Dub! Ouu! Dub! Ouu! Fresher than your sister's yoghurt, Keto don't be drooping! just DUB!!!</p>
-        <button type="button" class="btn get">  <span>$450</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="btn get">  <span>$450</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeblue.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
@@ -131,14 +122,14 @@
         <img src="images/nikeRun.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikearmyg.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
@@ -152,49 +143,49 @@
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="get btn">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="get btn">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="get btn">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="get btn">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
       <div class="col-md-3">
         <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="get btn">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
+        <a href="#checked-out"><button type="button" class="get btn">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button></a>
       </div>
 
 
@@ -203,19 +194,14 @@
 
   <br><br><br><br>
 
+    <div class="">
 
-  <div id="elastic_grid_demo"></div>
-
-
-
-
-
-
+    </div>
 
 
   <br><br>
 
-  <form class="form-class" action="index.html" method="post">
+  <form class="form-class" id="form-id">
     <div class="container signup-con">
       <h1>Sign Up</h1>
       <p>Please fill in this form to create an account</p>
@@ -256,7 +242,9 @@
           <div class="row">
             <div class="col-50">
               <h3>Billing Address</h3>
+
               <label for="fname"><i class="fa fa-user"></i> Full Name</label>
+
               <input type="text" id="fname" name="firstname" class="form-control" placeholder="John Doe">
 
               <label for="email"> <i class="fa fa-envelope"></i> Email</label>
@@ -286,10 +274,10 @@
               <h3>Payment</h3>
               <label for="fname">Accepted Cards</label>
               <div class="icon-container">
-                <i class="fa fa-cc-visa" style="color:navy;"></i>
-                <i class="fa fa-cc-amex" style="color:blue;"></i>
+                <i class="fa fa-cc-visa" style="color:blue;"></i>
                 <i class="fa fa-cc-mastercard" style="color:red;"></i>
                 <i class="fa fa-cc-discover" style="color:orange;"></i>
+                <i class="fa fa-cc-paypal" style="color:blue;"></i>
               </div>
 
               <label for="cname">Name on Card</label>
