--- a/index.html
+++ b/index.html
@@ -90,31 +90,31 @@
 <div class="section">
   <div class="container">
     <div class="row" id="hou">
-  <h2 style="color:#e52a6f">About Rent a Shoe</h3>
-    <p>Rent a shoe enables a user lend their un-used shoes to those who might need to use them, for a specific occassion and return them.<br>
+  <h2 style="color:#e52a6f; font-size:35px;">About Rent a Shoe</h3>
+    <p style="font-size: 20px;">Rent a shoe enables a user lend their un-used shoes to those who might need to use them, for a specific occassion and return them.<br>
     The borrower chooses a shoe, then the company gets the shoe from the shoe owner and delivers the shoe, collects the money and once the shoe is returned, the customer gets back a percentage, the owner too as well as the company. </p>
 </div>
 </div>
 </div>
-<div class="sect">
-  <div class="container-fluid">
-      <h2 style="color:#e52a6f">what We Offer</h3>
+
+  <div class="container-fluid" id="boxes">
+      <h2 style="color:#67aeca">What We Offer</h3>
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-md-4" id="image-col">
       <div class="container" id="overlaying">
   <img src="images/cara3.0.jpg" alt="Shoe-1 Display" class="image">
   <div class="overlay">MEN'S SHOES</div>
 </div>
   </div>
 
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-md-4" id="image-col">
       <div class="container" id="overlaying">
   <img src="images/cara2.jpg" alt="Image" class="image">
   <div class="overlay">LADIES' SHOES</div>
 </div>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-md-4" id="image-col">
       <div class="container" id="overlaying">
   <img src="images/shoe6.jpeg" alt="Image" class="image">
   <div class="overlay">KID'S SHOES</div>
@@ -123,16 +123,17 @@
   </div>
 </div>
 
-<footer class="container-fluid text-center">
+
+<footer class="container-fluid text-center" id="subscribe">
   <div class="foot">
-  <p>Online Shop</p>
+    <h2 style="color:#67aeca">SUBSCRIBE</h3>
   <form class="form-inline">Get Daily Updates:
     <input type="email" class="form-control" size="50" placeholder="Email Address">
-    <button type="button" class="btn btn-danger">Sign Up</button>
+    <button type="button" class="btn btn-danger"style="background-color: #e52a6f">Sign Up</button>
   </div>
 </footer>
 
-<footer class="container-fluid" id="moo">
+<footer class="container-fluid" id="moo" style="text-align: center">
   <div class="row" >
     <div class="col-md-3 text-left" id="social">
       <h4 id="kj">KEEP IN TOUCH</h4>
@@ -170,13 +171,15 @@
     Hours: <br>
     Phone: 256 772 128 128 <br>
 </div>
+
 </footer>
-
-
-
 <div class="foo3">
-    <p>© 2018 Rent a Shoe. All Rights Reserved.</p>
+    <p style="text-align: center">© 2018 Rent a Shoe. All Rights Reserved.</p>
   </div>
+
+
+
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 </body>
